--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -6,13 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-
-    Hola
+    
+<h1>Exercicis</h1>
+<h2>HTML</h2>
+<h3>Formato</h3>
+<a href="html/02_formato/act1.html"> Activita 1</a>
 <br/>
-
-    <a href="activitats/activitats.html"> Anar a activitats</a>
+<a href="html/02_formato/act2.html"> Activita 2</a>
 </body>
-
-
-
 </html>
