--- a/activitats/html/02_formato/act1.html
+++ b/activitats/html/02_formato/act1.html
@@ -1,1 +1,1 @@
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.<p> </p> Possimus corporis nesciunt exercitationem qui.<p> </p> Distinctio sequi perspiciatis molestias quod! Praesentium molestiae reprehenderit maxime at pariatur qui enim dicta illo!<p></p> Harum, incidunt! </p>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.<p> </p> Possimus corporis nesciunt exercitationem qui.<p> </p> Distinctio sequi perspiciatis molestias quod!<p></p> Praesentium molestiae reprehenderit maxime at pariatur qui enim dicta illo!<p></p> Harum, incidunt! </p>
