--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -13,5 +13,7 @@
 <a href="html/02_formato/act1.html"> Activita 1</a>
 <br/>
 <a href="html/02_formato/act2.html"> Activita 2</a>
+<br/>
+<a href="activitats.html/act3.html"> Activitat 3</a>
 </body>
 </html>
