--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -14,6 +14,6 @@
 <br/>
 <a href="html/02_formato/act2.html"> Activita 2</a>
 <br/>
-<a href="activitats.html/act3.html"> Activitat 3</a>
+<a href="html/03_formato/act3.html"> Activitat 3</a>
 </body>
 </html>
