--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -15,5 +15,9 @@
 <a href="html/02_formato/act2.html"> Activita 2</a>
 <br/>
 <a href="html/03_formato/act3.html"> Activitat 3</a>
+<br>
+<a href="html/04_formato/act4.html"> Activitat 4</a>
+<br>
+<a href="html/05_formato/act5.html"> Activitat 5</a>
 </body>
 </html>
