--- a/activitats/html/02_formato/act6.html
+++ b/activitats/html/02_formato/act6.html
@@ -1,10 +1,16 @@
 <h2>Julio Verne</h2>
 
 
-<p>Jules Gabriel Verne, conocido en los países hispanohablantes como Julio Verne</p>
+<p><strong>Jules Gabriel Verne</strong>, conocido en los países hispanohablantes como <strong>Julio Verne</strong></p>
 <p>(Nantes, 8 de febrero de 1828-Amiens, 24 de marzo de 1905), fue un escritor, poeta y </p> 
-<p>dramaturgo francés célebre por sus novelas de aventuras y por su profunda</p>
-<p> influencia en el género literario de la ciencia ficción. Se le considera, junto con H. G. Wells, el «padre de la ciencia ficción».</p>
-<p>Nacido en una familia burguesa, estudió para continuar los pasos de su padre como</p> 
-<br>		
-<p>abogado, pero muy joven decidió abandonar ese camino para dedicarse a la literatura. Su colaboración con el editor Pierre-Jules Hetzel dio como fruto la creación de Viajes extraordinarios, una popular serie de novelas de aventuras escrupulosamente documentadas y visionarias entre las que se incluían las famosas Cinco semanas en globo (1863), Viaje al centro de la Tierra (1864), De la Tierra a la Luna (1865), Veinte mil leguas de viaje submarino (1870), La vuelta al mundo en ochenta días (1872) o La isla misteriosa (1874).
+<p>dramaturgo francés célebre por sus<strong>novelas de aventuras </strong>  y por su profunda</p>
+<p> influencia en el género literario de la <strong>ciencia ficción.</strong> Se le considera, junto con H. G. Wells, el «padre de la ciencia ficción».</p>
+<br>
+<p>Nacido en una familia <i>burguesa,</i> estudió para continuar los pasos de su padre como</p> 		
+<p>abogado, pero muy joven decidió abandonar ese camino para dedicarse a la</p>
+<p>literatura. Su colaboración con el editor Pierre-Jules Hetzel dio como fruto la</p>> 
+<p>creación de Viajes extraordinarios, una popular serie de novelas de aventuras</p>
+<p>escrupulosamente documentadas y visionarias entre las que se incluían las famosas</p> 
+<p><i>Cinco semanas en globo (1863), Viaje al centro de la Tierra (1864), De la Tierra a la</p>
+<p>Luna (1865), Veinte mil leguas de viaje submarino (1870), La vuelta al mundo en</p>
+<p>ochenta días (1872) o La isla misteriosa (1874).</i></p>
