--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -11,13 +11,15 @@
 <h2>HTML</h2>
 <h3>Formato</h3>
 <a href="html/02_formato/act1.html"> Activita 1</a>
-<br/>
+<br>
 <a href="html/02_formato/act2.html"> Activita 2</a>
-<br/>
+<br>
 <a href="html/02_formato/act3.html"> Activitat 3</a>
 <br>
 <a href="html/02_formato/act4.html"> Activitat 4</a>
 <br>
 <a href="html/02_formato/act5.html"> Activitat 5</a>
+<br>
+<a href="html/02_formato/act6.html"> Activitat 6</a>
 </body>
 </html>
