--- a/activitats/html/02_formato/act6.html
+++ b/activitats/html/02_formato/act6.html
@@ -2,13 +2,13 @@
 
 
 <p><strong>Jules Gabriel Verne</strong>, conocido en los países hispanohablantes como <strong>Julio Verne</strong></p>
-<p>(Nantes, 8 de febrero de 1828-Amiens, 24 de marzo de 1905), fue un escritor, poeta y </p> 
+<p><i>(Nantes, 8 de febrero de 1828-Amiens, 24 de marzo de 1905)</i>, fue un escritor, poeta y </p> 
 <p>dramaturgo francés célebre por sus<strong>novelas de aventuras </strong>  y por su profunda</p>
 <p> influencia en el género literario de la <strong>ciencia ficción.</strong> Se le considera, junto con H. G. Wells, el «padre de la ciencia ficción».</p>
 <br>
 <p>Nacido en una familia <i>burguesa,</i> estudió para continuar los pasos de su padre como</p> 		
 <p>abogado, pero muy joven decidió abandonar ese camino para dedicarse a la</p>
-<p>literatura. Su colaboración con el editor Pierre-Jules Hetzel dio como fruto la</p>> 
+<p>literatura. Su colaboración con el editor <i>Pierre-Jules</i> Hetzel dio como fruto la</p>
 <p>creación de Viajes extraordinarios, una popular serie de novelas de aventuras</p>
 <p>escrupulosamente documentadas y visionarias entre las que se incluían las famosas</p> 
 <p><i>Cinco semanas en globo (1863), Viaje al centro de la Tierra (1864), De la Tierra a la</p>
