--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -21,5 +21,7 @@
 <a href="html/02_formato/act5.html"> Activitat 5</a>
 <br>
 <a href="html/02_formato/act6.html"> Activitat 6</a>
+<br>
+<a href="html/02_formato/act7.html"> Activitat 7</a>
 </body>
 </html>
