--- a/activitats/html/02_formato/act7.html
+++ b/activitats/html/02_formato/act7.html
@@ -1,5 +1,7 @@
 <h2>Vacaciones de Verano</h2>
 
 
-<p>El <i>19 de agosto de 2023</i> difrute de um dia maravilloso en <strong>la playa</strong></p>
+<p>El <i>19 de agosto de 2023</i> difrute de un dia maravilloso en <strong>la playa</strong></p>
 <p> era un dia muy acluroso pero <strong>divertido</strong></p>
+<p>buceamos mucho hasta que entramos a un &quot;banco&quot; de <b>medusas</b> </p>
+  
