--- a/activitats/html/02_formato/act7.html
+++ b/activitats/html/02_formato/act7.html
@@ -4,4 +4,5 @@
 <p>El <i>19 de agosto de 2023</i> difrute de un dia maravilloso en <strong>la playa</strong></p>
 <p> era un dia muy acluroso pero <strong>divertido</strong></p>
 <p>buceamos mucho hasta que entramos a un &quot;banco&quot; de <b>medusas</b> </p>
-  
+<br>
+<p>Despues de ese gran susto fuimos a comer un <i><b>plato de calamares muy rico</i><b></p>
