--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     Hola
 <br/>
 
-    <a href="activitats/activitats.html"> Anar a activitats</a>
+    <a href="activitats/activitats2.html"> Anar a activitats 2</a>
+    
+    
+ 
+ 
 </body>
-
+   <a href="activitats/activitats3.html"> Anar a activitats 3</a>
 
 
 </html>
