--- a/activitats/html/03_formato/act1.html
+++ b/activitats/html/03_formato/act1.html
@@ -12,4 +12,4 @@
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint blanditiis voluptatum saepe praesentium temporibus mollitia nulla,</p>
 <p>beatae accusamus facilis nemo qui consectetur fugit quibusdam voluptate vero molestias laboriosam iste suscipit?</p>
 
-<a href="https://www.gnu.org/software/emacs/">Vea nuestra historis</a>
+<a href="https://www.gnu.org/software/emacs/">Vea nuestra historia</a>
