--- a/activitats/html/03_formato/act2.html
+++ b/activitats/html/03_formato/act2.html
@@ -1,4 +1,4 @@
-<a href="index.html">Volver a inicio</a>
+<a href="C:\Users\ilato\OneDrive\Documentos\GitHub\web\index.html">Volver a inicio</a>
 <br>
 <h1>Menús</h1>
 <br>
