--- a/index.html
+++ b/index.html
@@ -20,4 +20,17 @@
    <a href="activitats/activitats3.html"> Anar a activitats 3</a>
 
 
+
+<body>
+<br>  
+    <a href="activitats/activitats4.html"> Anar a activitats 4</a>
+
+
+</body>
+
+
+
+
+
+
 </html>
