--- a/activitats/activitats4.html
+++ b/activitats/activitats4.html
@@ -11,3 +11,5 @@
 <h2>HTML</h2>
 <h3>Formato</h3>
 <a href="html/04_formato/act1.html"> Activitat 1
+<br>
+<a href="html/04_formato/act2.html"> Activitat 2
