--- a/activitats/activitats4.html
+++ b/activitats/activitats4.html
@@ -13,3 +13,9 @@
 <a href="html/04_formato/act1.html"> Activitat 1
 <br>
 <a href="html/04_formato/act2.html"> Activitat 2
+<br> 
+<a href="html/04_formato/act3.html"> Activitat 3
+<br>
+<a href="html/04_formato/act4.html"> Activitat 4
+<br>
+<a href="html/04_formato/act5.html"> Activitat 5
