--- a/activitats/html/05_formato/act1.html
+++ b/activitats/html/05_formato/act1.html
@@ -6,4 +6,11 @@
 <br>
 <h3>Dueño</h3>
 <br>
-<img src="Gato.svg" alt="Gato bonito">
+<img src="C:\Users\ilato\OneDrive\Escritorio\Gato bonito.svg" alt="Gato bonito">
+<br>
+<h3>Competencia</h3>
+<br>
+<a>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</a>
+<a>Doloribus ab molestias nihil reprehenderit quasi expedita nostrum incidunt hic eius neque ut quisquam,</a>
+<a> nemo cupiditate harum illo eveniet dolorem itaque at?</a>
+<br> 
