--- a/index.html
+++ b/index.html
@@ -8,29 +8,24 @@
 <body>
 
     Hola
-<br/>
+ <br/>
 
     <a href="activitats/activitats2.html"> Anar a activitats 2</a>
     
-    
- 
- 
 </body>
-<br>
+<body>
+ <br>
    <a href="activitats/activitats3.html"> Anar a activitats 3</a>
 
-
-
-<body>
-<br>  
+ <br>  
     <a href="activitats/activitats4.html"> Anar a activitats 4</a>
+
+    <a href="activitats/activitats5.html"> Anar activitats 5</a>
+
+
+
+
 
 
 </body>
-
-
-
-
-
-
 </html>
