--- a/activitats/activitats5.html
+++ b/activitats/activitats5.html
@@ -10,4 +10,6 @@
 <h1>Exercicis</h1>
 <h2>HTML</h2>
 <h3>Formato</h3>
-<a href="html/05_formato/act1.html" Activitat 1
+<a href="html/05_formato/act1.html"> Activitat 1</a>
+<br>
+<a href="html/05_formato/act2.html"> Activitat 2</a>
