--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-    Hola
- <br/>
+    <a>Entrad a mi pagina wapetones</a>
+ <a>Te amo cariñitoooooo</a>
 
     <a href="activitats/activitats2.html"> Anar a activitats 2</a>
     
@@ -20,7 +20,7 @@
  <br>  
     <a href="activitats/activitats4.html"> Anar a activitats 4</a>
  <br>
-    <a href="activitats/activitats5.html"> Anar activitats 5</a>
+    <a href="activitats/activitats5.html"> Anar a activitats 5</a>
 
 
 
