--- a/activitats/html/03_formato/act3.html
+++ b/activitats/html/03_formato/act3.html
@@ -7,16 +7,16 @@
 </head>
 
 <a href="#PRIMER ACTO ">Ver primer acto</a>
-
+<a href="#ESCENA I">Ver primera escena</a>
 
 
 <body>
     <article class="group post">
         <h1 class="title">Guión obra de teatro</h1>
         <div class="breadcumb"><a href="https://www.ejemplode.com" title="Inicio">Inicio</a> » <a href="/11-escritos/" rel="bookmark">Escritos</a> » Guión obra de teatro
-        <p align="center">PRIMER ACTO</p>
+        <p align="center"><p id="PRIMER ACTO"></p>PRIMER ACTO</p>
         <p>El baño del departamento de Mónica. Un baño muy bien amueblado y con acabados lujosos. La puerta está del lado izquierdo. Azulejos de color amarillo pastel con figurillas que se engarzan entre sí. El lavamanos tiene dos puertas en la parte inferior, un espejo encima que toca el techo, al lado derecho un retrete y a la diestra de este se encuentra la tina de hidromasaje. Tres cuadros decorativos. Jabones de colores y una maceta.</p>
-        <p align="center">ESCENA I</p>
+        <p align="center"><p id="ESCENA I"></p>ESCENA I</p>
         <p>Mónica entra al baño, trae en la mano un teléfono inalámbrico, cierra la puerta y se mira en el espejo de forma pensativa y como reconociéndose a sí misma, mirándose extrañada como si su reflejo no fuera el de ella misma. Se toca la cara.</p>
         <p><strong>Mónica: </strong>Mm! No cabe la menor duda; ya no tengo el mismo aspecto, no soy la misma. Estos últimos veinte años han acabado conmigo. Las bolsas debajo de mis ojos son de insomnio, las patas de gallo al lado de las sienes son el resultado de la experiencia insatisfecha y mediocre que he adquirido; esta marca (señalando la marca que la sonrisa deja al paso del tiempo) es de hipocresía. De vivir siendo la que no soy, mostrándome como muñeca de porcelana a la cual no se le permite quebrarse y fingir afecto por aquellas personas que no soportaba, (suspira con desánimo y resignación).</p>
         <p>Hace una pausa leve mientras continúa explorando su cara.</p>
