--- a/activitats/activitats3.html
+++ b/activitats/activitats3.html
@@ -10,7 +10,8 @@
 <h1>Exercicis</h1>
 <h2>HTML</h2>
 <h3>Formato</h3>
-<a href="html/03_formato/act1.html"> Activita 1</a>
+<a href="html/03_formato/act1.html"> Activitat 1</a>
 <br>
-<a href="html/03_formato/act2.html"> Activita 2</a>
+<a href="html/03_formato/act2.html"> Activitat 2</a>
 <br>
+<a href="html/03_formato/act3.html"> Activitat 3</a>
