--- a/activitats/html/03_formato/act3.html
+++ b/activitats/html/03_formato/act3.html
@@ -7,14 +7,20 @@
 </head>
 
 <a href="#PRIMER ACTO ">Ver primer acto</a>
+<br>
 <a href="#ESCENA I">Ver primera escena</a>
+<br>
 <a href="#ESCENA II">Ver segunda escena</a>
+<br>
 <a href="#ACTO DOS">Ver segundo acto</a>
-<a href="ESCENA III">Ver primer acto de la segunda escena</a>
-
-
-
-
+<br>
+<a href="ESCENA III">Ver primera escena del segunda acto</a>
+<br> 
+<a href="ACTO III">Ver tercer acto</a>
+<br>
+<a href="ESCENA 4">Ver primera escena del acto tres</a>
+<br>
+<h href="ESCENA 5">Ver segunda escena del acto tres</h>
 
 <body>
     <article class="group post">
@@ -53,9 +59,9 @@
         <p>Mariana, quién quedó sobre Mónica, coloca su sexo sobre el de su pareja y comienzan a realizar movimientos pélvicos a lo largo de dos minutos.</p>
         <p>La que estaba arriba se recuesta a un lado de la de abajo y comienzan a masturbarse la una a la otra.</p>
         <p>Parece faltarles el aire, pero no se ven intenciones algunas de cesar con el acontecimiento. Mónica se sube literalmente en Mariana y se repiten los movimientos pélvicos. Después de dos gritos (uno de cada una, pero que se confunden por la uniformidad del tiempo en el orgasmo.)</p>
-        <p align="center">ACTO TERCERO</p>
+        <p align="center"><p id="ACTO III"></p>ACTO TERCERO</p>
         <p>El baño del departamento de Mónica. Un baño muy bien amueblado y con acabados lujosos. La puerta está del lado izquierdo. Azulejos de color amarillo pastel con figurillas que se engarzan entre sí. El lavamanos tiene dos puertas en la parte inferior, un espejo encima que toca el techo, al lado derecho un retrete y a la diestra de este se encuentra la tina de hidromasaje. Tres cuadros decorativos. Jabones de colores y una maceta.</p>
-        <p align="center">ESCENA I</p>
+        <p align="center"><p id="ESCENA 4"></p>ESCENA I</p>
         <p>Mónica continúa extasiada en la tina con el teléfono entre el hombro y la oreja.</p>
         <p><strong>Mónica: </strong>¿Mi familia? Ya empezaste. Para que cortar un momento tan hermoso como el que estábamos recordando sólo por mi familia.</p>
         <p align="center">(PAUSA)</p>
@@ -71,7 +77,7 @@
         <p><strong>Mónica: </strong>Pues es necesario pensar en eso.</p>
         <p align="center">(PAUSA)</p>
         <p><strong>Mónica: </strong>¿Qué tome el riesgo? ¡Tú hablando de riesgos! No sabes el riesgo que corro cada vez que te veo, cada vez que me hablas, cada vez que nos amamos. No sabes el riesgo que corro por la simple y sencilla razón de estar sentada aquí hablando contigo. Alguien podría escuchar nuestra conversación.</p>
-        <p align="center">ESCENA II</p>
+        <p align="center"><p id="ESCENA 5"></p>ESCENA II</p>
         <p>Roberto sale a escena, se acerca a la puerta del baño, pega una oreja en la puerta. Y toca:</p>
         <p><strong>Roberto: ¿</strong>Mónica? ¿Qué tienes amor? ¿Te sientes bien? Llevas un buen rato ahí adentro, desde que llegué estás ahí. ¿Te pasa algo?</p>
         <p><strong>Mónica: </strong>¿Roberto? Has llegado; no, no me pasa nada mi amor. Simples malestares estomacales ya sabes comes algo y te cae mal, un poco pesado pero sólo eso, en un momento salgo ya se me está pasando, para que cenemos.</p>
