--- a/activitats/html/03_formato/act3.html
+++ b/activitats/html/03_formato/act3.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>Teatro</title>
 </head>
-
+</html>
+<h3>Intice</h3>
 <a href="#PRIMER ACTO ">Ver primer acto</a>
 <br>
 <a href="#ESCENA I">Ver primera escena</a>
@@ -14,13 +15,6 @@
 <br>
 <a href="#ACTO DOS">Ver segundo acto</a>
 <br>
-<a href="ESCENA III">Ver primera escena del segunda acto</a>
-<br> 
-<a href="ACTO III">Ver tercer acto</a>
-<br>
-<a href="ESCENA 4">Ver primera escena del acto tres</a>
-<br>
-<h href="ESCENA 5">Ver segunda escena del acto tres</h>
 
 <body>
     <article class="group post">
@@ -59,7 +53,7 @@
         <p>Mariana, quién quedó sobre Mónica, coloca su sexo sobre el de su pareja y comienzan a realizar movimientos pélvicos a lo largo de dos minutos.</p>
         <p>La que estaba arriba se recuesta a un lado de la de abajo y comienzan a masturbarse la una a la otra.</p>
         <p>Parece faltarles el aire, pero no se ven intenciones algunas de cesar con el acontecimiento. Mónica se sube literalmente en Mariana y se repiten los movimientos pélvicos. Después de dos gritos (uno de cada una, pero que se confunden por la uniformidad del tiempo en el orgasmo.)</p>
-        <p align="center"><p id="ACTO III"></p>ACTO TERCERO</p>
+        <p align="center"><p id="ACTO TRES"></p>ACTO TERCERO</p>
         <p>El baño del departamento de Mónica. Un baño muy bien amueblado y con acabados lujosos. La puerta está del lado izquierdo. Azulejos de color amarillo pastel con figurillas que se engarzan entre sí. El lavamanos tiene dos puertas en la parte inferior, un espejo encima que toca el techo, al lado derecho un retrete y a la diestra de este se encuentra la tina de hidromasaje. Tres cuadros decorativos. Jabones de colores y una maceta.</p>
         <p align="center"><p id="ESCENA 4"></p>ESCENA I</p>
         <p>Mónica continúa extasiada en la tina con el teléfono entre el hombro y la oreja.</p>
