--- a/activitats/html/04_formato/act5.html
+++ b/activitats/html/04_formato/act5.html
@@ -1,7 +1,7 @@
 <h1>Animales extintos</h1>
 
 <dl>
-    <dt>Pez de mano liso</dt>
+    <dt>Primero el tiranosaurio rex</dt>
     <dd>El pez de mano rojo es un pariente cercano.</dd>
     <dt>El lobo de Tasmania</dt>
     <dd>Eran unos animales feroces pero tímidos que se alimentaban de roedores y canguros y que fueron cazados hasta la extinción por los humanos.</dd>
