--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
- <a>Entrad a mi pagina wapetones</a>
+ <a>HOLA!!!!</a>
  
 <br>
     <a href="activitats/activitats2.html"> Anar a activitats 2</a>
