--- a/activitats/html/05_formato/act1.html
+++ b/activitats/html/05_formato/act1.html
@@ -6,7 +6,7 @@
 <br>
 <h2>Dueño</h2>
 <br>
-<img src="/activitats/img/gato.jpg">
+<img src="../../img/gato.jpg">
 <br>
 <h2>Competencia</h2>
 <br>
@@ -14,4 +14,4 @@
 <a>Doloribus ab molestias nihil reprehenderit quasi expedita nostrum incidunt hic eius neque ut quisquam,</a>
 <a> nemo cupiditate harum illo eveniet dolorem itaque at?</a>
 <br> 
-<img src="/activitats/img/gato1.jpg">
+<img src="../../img/gato1.jpg">
