--- a/activitats/html/05_formato/act1.html
+++ b/activitats/html/05_formato/act1.html
@@ -1,8 +1,8 @@
 <h1>Cafetería</h1>
 <br>
-<a>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</a> 
-<a>Quae fuga, cumque, natus illo, cum nisi consectetur quas eum in atque voluptates.</a>
-<a> Aut incidunt rerum, optio eos vero maxime expedita qui.</a>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p> 
+<p>Quae fuga, cumque, natus illo, cum nisi consectetur quas eum in atque voluptates.</p>
+<p> Aut incidunt rerum, optio eos vero maxime expedita qui.</p>
 <br>
 <h2>Dueño</h2>
 <br>
@@ -10,8 +10,8 @@
 <br>
 <h2>Competencia</h2>
 <br>
-<a>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</a>
-<a>Doloribus ab molestias nihil reprehenderit quasi expedita nostrum incidunt hic eius neque ut quisquam,</a>
-<a> nemo cupiditate harum illo eveniet dolorem itaque at?</a>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+<p>Doloribus ab molestias nihil reprehenderit quasi expedita nostrum incidunt hic eius neque ut quisquam,</a>
+<a> nemo cupiditate harum illo eveniet dolorem itaque at?</p>
 <br> 
 <img src="../../img/gato1.jpg">
