--- a/activitats/html/05_formato/act2.html
+++ b/activitats/html/05_formato/act2.html
@@ -2,6 +2,6 @@
 <br>
 <img src="../../img/facebook.jpg">
 <br>
-<img src="../../img/twitter.jpg">
+<img src="../../img/twitter1.jpg">
 <br>
-<img src="../../img/yt.jpg">
+<img src="../../img/yt1.jpg">
