--- a/activitats/activitats5.html
+++ b/activitats/activitats5.html
@@ -13,3 +13,5 @@
 <a href="html/05_formato/act1.html"> Activitat 1</a>
 <br>
 <a href="html/05_formato/act2.html"> Activitat 2</a>
+<br>
+<a href="html/05_formato/act3.html"> Activitat 3</a>
