--- a/activitats/html/05_formato/act3.html
+++ b/activitats/html/05_formato/act3.html
@@ -1,7 +1,7 @@
 <p><h1>Aparatox</h1></p>
 <h2>Maakvok</h2>
 <br>
-<img src="../../img/mAC.jpg" media0="(max-width: 5px)">
+<img src="../../img/mAC.jpg" width="500">
 <br>
 <h3><p>230 euros</p></h3>
 <h3>Descripción</h3>
