--- a/activitats/html/05_formato/act2.html
+++ b/activitats/html/05_formato/act2.html
@@ -1,7 +1,7 @@
 <h1>Redes sociales</h1>
 <br>
-<img src="../../img/facebook.jpg">
+<img src="../../img/facebook.jpg" alt="logo" width="20">
 <br>
-<img src="../../img/twitter1.jpg">
+<img src="../../img/twitter1.jpg"alt="logo" width="20">
 <br>
-<img src="../../img/yt1.jpg">
+<img src="../../img/yt1.jpg" alt="logo" width="20">
