--- a/activitats/html/05_formato/act1.html
+++ b/activitats/html/05_formato/act1.html
@@ -12,6 +12,6 @@
 <br>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 <p>Doloribus ab molestias nihil reprehenderit quasi expedita nostrum incidunt hic eius neque ut quisquam,</a>
-<a> nemo cupiditate harum illo eveniet dolorem itaque at?</p>
+<a> nemo cupiditate harum illo eveniet dolorem los itaque at?</p>
 <br> 
 <img src="../../img/gato1.jpg">
