--- a/activitats/activitats5.html
+++ b/activitats/activitats5.html
@@ -15,3 +15,5 @@
 <a href="html/05_formato/act2.html"> Activitat 2</a>
 <br>
 <a href="html/05_formato/act3.html"> Activitat 3</a>
+<br> 
+<a href="html/05_formato/act4.html"> Activitat 4</a>
