--- a/activitats/html/05_formato/act4.html
+++ b/activitats/html/05_formato/act4.html
@@ -1,3 +1,9 @@
 <h1>Receta "Mi tortilla de patata"</h1>
 <br>
-<p></p>
+<h2>Receta de tortilla de patatas</h2>
+<h3>Ingredientes</h3>
+<p>5 huevos</p>
+<p>500 g de patatas</p>
+<p>1 cebolla (opcional)</p>
+<p>Sal</p>
+<p>Aceite de oliva virgen extra</p>
