--- a/activitats/html/05_formato/act4.html
+++ b/activitats/html/05_formato/act4.html
@@ -7,3 +7,35 @@
 <p>1 cebolla (opcional)</p>
 <p>Sal</p>
 <p>Aceite de oliva virgen extra</p>
+<br>
+<h2>Cómo hacer tortilla de patata española</h2>
+<img src="../../img/tortilla-de-patatas-paso-a-paso.jpg.webp" widht="300">
+<p>Pelamos y lavamos las patatas, las cortamos en rodajas finas al igual que la cebolla si la</p>
+<p>queremos añadir.</p>
+<p>Ponemos en una sartén y cubrimos de aceite de oliva virgen extra</p>
+<p>Dejamos que se pochen a fuego medio-suave hasta que comiencen a dorarse. Sabréis</p>
+<p>que las patatas están hechas cuando comiencen a romperse, con la paleta. Para que la</p>
+<p>tortilla esté jugosa es importante que las patatas se hagan bien y se confiten, porque no</p>
+<p>hay nada peor que una tortilla con las patatas medio crudas. Por lo tanto, paciencia con</p>
+<p>este paso.</p>
+<img src="../../img/huevos-para-tortilla-de-patatas1.webp" widht="300">
+<br>
+<p>Las sacamos de la sartén y escurrimos bien. Ponemos en un cuenco grande </p>
+<p>Aparte batimos los huevos y los añadimos a las patatas y a la cebolla, añadimos un poco</p>
+<p>de sal y mezclamos.</p>
+<p>Dejamos un par de minutos que se mezclen bien.</p>
+<p>Aquí hay quien prefiere dejar las patatas enteras y quien prefiere machacarlas un poco</p>
+<p>con la paleta para que se mezclen bien con el huevo.</p>
+<img src="../../img/2como-cuajar-tortilla-de-patatas.webp" widgt="300">
+<br>
+<p>Ponemos en la sartén un par de cucharadas de aceite de oliva virgen extra y vertemos</p>
+<p>todo.</p>
+<p>Al principio rompemos un poco, como si fuéramos a hacer un revuelto, luego</p>
+<p>vamos dándole forma  por los bordes.</p>
+<img src="../../img/3como-dar-la-vuelta-a-la-tortilla-de-patatas.webp" widget="300">
+<p>Cuando veamos que ya está cuajada por abajo ponemos un plato o una tapa encima de la</p>
+<p>sartén y le damos la vuelta rápidamente.</p>
+<p>Ponemos de nuevo la sartén en el fuego y deslizamos la tortilla desde el plato a la sartén.</p>
+<p>Dejamos unos minutos más mientras redondeamos los bordes con la espátula 2 o 3 si te</p>
+<p>gusta más cuajada, menos si te gusta jugosa para que se termine de hacer y ya tenemos</p>
+<p>lista nuestra tortilla de patatas.</p>
