--- a/activitats/html/05_formato/act4.html
+++ b/activitats/html/05_formato/act4.html
@@ -38,4 +38,4 @@
 <p>Ponemos de nuevo la sartén en el fuego y deslizamos la tortilla desde el plato a la sartén.</p>
 <p>Dejamos unos minutos más mientras redondeamos los bordes con la espátula 2 o 3 si te</p>
 <p>gusta más cuajada, menos si te gusta jugosa para que se termine de hacer y ya tenemos</p>
-<p>lista nuestra tortilla de patatas.</p>
+<p>lista nuestra<strong>tortilla de patatas.</strong></p>
