--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <a href="activitats/activitats4.html"> Anar a activitats 4</a>
  <br>
     <a href="activitats/activitats5.html"> Anar a activitats 5</a>
-
+<br>
+    <a href="activitats/activitats6.html"> Anar a activitats 6</a>
 
 
 
