--- a/activitats/html/06_formato/act1.html
+++ b/activitats/html/06_formato/act1.html
@@ -12,5 +12,15 @@
             <td><h3>Mulan</h3></td>
             <td><h3>1998</h3></td>
         </tr>
+        <tr>
+            <td><img src="../../img/el rey leon.jpg"></td>
+            <td>El ret león</td>
+            <td>1994</td>
+        </tr>
+        <tr>
+            <td><img src="../../img/aladdin.jpg"></td>
+            <td>Aladdin</td>
+            <td>1992</td>
+        </tr>
     </tbody>
 </table>
