--- a/activitats/activitats6.html
+++ b/activitats/activitats6.html
@@ -11,3 +11,6 @@
 <h2>HTML</h2>
 <h3>Formato</h3>
 <a href="html/06_formato/act1.html"> Activitat 1</a>
+<br>
+<a href="html/06_formato/act2.html"> Activitat 2</a>
+<br>
