--- a/activitats/html/06_formato/act2.html
+++ b/activitats/html/06_formato/act2.html
@@ -12,14 +12,17 @@
     <tbody>
         <tr>
             <td>Aleix</td>
-
             <td>Garcia Ferrer</td>
-
             <td>21</td>
-
             <td>Masculino</td>
-            
             <td>Porque me mira mal</td>
+        </tr>
+        <tr>
+            <td>Naila</td>
+            <td>Escalona</td>
+            <td>30</td>
+            <td>Femenino</td>
+            <td>Es pesada</td>
         </tr>
     </tbody>
 </table>
