--- a/activitats/html/06_formato/act3.html
+++ b/activitats/html/06_formato/act3.html
@@ -7,6 +7,12 @@
             <th scope="col">Datos basicos</th>
             
         </tr>
+        <tr>
+            <th scope="col">Experiencia</th>
+            <th scope="col">Habilidades</th>
+
+
+        </tr>
     </thead>
     <tbody>
         <tr>
@@ -14,6 +20,15 @@
             <td>telf:652348057
                 correo:ilatorreoman@gmail.com
             </td>
+        </tr>
+        <tr>
+            <td>Trabaje durante 4 años como TACE en hospital psiquiatrico</td>
+            <td>Se trabajar en equipo
+                Iniciativa
+                Responsable 
+            </td>
+
+
         </tr>
     </tbody>
 </table>
