--- a/activitats/html/06_formato/act3.html
+++ b/activitats/html/06_formato/act3.html
@@ -23,9 +23,9 @@
         </tr>
         <tr>
             <td>Trabaje durante 4 años como TACE en hospital psiquiatrico</td>
-            <td>Se trabajar en equipo
-                Iniciativa
-                Responsable 
+            <td><p>Se trabajar en equipo</p>
+                <p>Iniciativa</p>
+                <p>Responsable</p>
             </td>
 
 
