--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <a href="activitats/activitats5.html"> Anar a activitats 5</a>
 <br>
     <a href="activitats/activitats6.html"> Anar a activitats 6</a>
+ <br>
+    <a href="activitats/activitats7.html"> Anar a activitats 7</a>
 
 
 
