--- a/activitats/html/07_Formularios/act1.html
+++ b/activitats/html/07_Formularios/act1.html
@@ -8,7 +8,7 @@
     </label>
   
     <label>
-        Número de asientos
+        Correo electrónico
         <input type="email" name="correo">
     </label>
   
