--- a/activitats/activitats7.html
+++ b/activitats/activitats7.html
@@ -9,6 +9,11 @@
     
 <h1>Exercicis</h1>
 <h2>HTML</h2>
-<h3>Formato</h3>
+<h3>Formularioa</h3>
 <a href="html/07_Formularios/act1.html"> Activitat 1</a>
+<br>
 <a href="html/07_Formularios/act2.html"> Activitat 2</a>
+<br>
+<a href="html/07_Formularios/act3.html"> Activitat 3</a>
+<br>
+<a href="html/07_Formularios/act4.html"> Activitats 4</a>
