--- a/activitats/activitats7.html
+++ b/activitats/activitats7.html
@@ -16,4 +16,4 @@
 <br>
 <a href="html/07_Formularios/act3.html"> Activitat 3</a>
 <br>
-<a href="html/07_Formularios/act4.html"> Activitats 4</a>
+<a href="html/07_Formularios/act4.html"> Activitat 4</a>
