--- a/activitats/html/07_Formularios/act4.html
+++ b/activitats/html/07_Formularios/act4.html
@@ -2,6 +2,7 @@
 <br>
 
 <select name="Modelo de camaras">
+    <option value="" aria-label="Marca" disabled selected>¿Qué marca desea?</option>
     <option value="0">Sony</option>
     <option value="1">Kodak</option>
     <option value="2">Blackmagig</option>
@@ -9,7 +10,7 @@
 </select>
 
 <select name="Megapixeles">
-    <option value="" aria-label="auriculares" disabled selected>¿Qué potencia desea?</option>
+    <option value="" aria-label="Megapixeles" disabled selected>¿Qué potencia desea?</option>
     <option value="0">50</option>
     <option value="1">60</option>
     <option value="2">70</option>
