--- a/activitats/html/07_Formularios/act1.html
+++ b/activitats/html/07_Formularios/act1.html
@@ -13,8 +13,8 @@
     </label>
   
     <label>
-        Mensaje
-        <inout type="text" name="texto">
+        Mensaje:
+        <textarea name="anotaciones"></textarea>
     </label>
 
     <button type="submit">Enviar</button>
