--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     <a href="activitats/activitats4.html"> Anar a activitats 4</a>
  <br>
     <a href="activitats/activitats5.html"> Anar a activitats 5</a>
-<br>
+ <br>
     <a href="activitats/activitats6.html"> Anar a activitats 6</a>
  <br>
     <a href="activitats/activitats7.html"> Anar a activitats 7</a>
+ <br>
+    <a href="activitats/activitats8.html"> Anar a activitats 8</a>
 
 
 
