--- a/activitats/html/08_Multimedia/act1.html
+++ b/activitats/html/08_Multimedia/act1.html
@@ -1,5 +1,5 @@
 
-<img src="../../img/rotQFyaeNQivUJOm3J3M7YqPNMx.jpg" alt="logo" width="20">
+<img src="../../img/rotQFyaeNQivUJOm3J3M7YqPNMx.jpg"  width="100">
 
 <audio
     controls
@@ -11,7 +11,7 @@
 </audio>
 <br>
 
-<img src="../../img/piratas.jpg" alt="logo" width="20">
+<img src="../../img/piratas.jpg" a width="100">
 
 <audio
     controls
@@ -23,7 +23,7 @@
 </audio>
 <br>
 
-<img src="../../img/int.jpg" alt="logo" width="20">
+<img src="../../img/int.jpg" alt="with" width="100">
 <audio
     controls
     src="../../audio/onlymp3.to - Interstellar Main Theme Hans Zimmer-kpz8lpoLvrA-192k-1704196814.mp3"
