--- a/activitats/html/08_Multimedia/act1.html
+++ b/activitats/html/08_Multimedia/act1.html
@@ -6,7 +6,7 @@
     src="../../audio/onlymp3.to - Gladiator Now We Are Free Super Theme Song--yOZEiHLuVU-192k-1704196696.mp3"
     >
     <p>
-        Su navegador no soporta el formato del audio, pulse <a href="../../audio/onlymp3.to - Drink Up Me Hearties Yo Ho From Pirates of the Caribbean At World s End Score -RUNRoXbaflM-192k-1704196920.mp3">aquí</a> para descargarlo.
+        Su navegador no soporta el formato del audio, pulse <a href="../../audio/onlymp3.to - Gladiator Now We Are Free Super Theme Song--yOZEiHLuVU-192k-1704196696.mp3">aquí</a> para descargarlo.
     </p>
 </audio>
 <br>
@@ -17,7 +17,7 @@
     controls
     src="../../audio/onlymp3.to - mamma_mia__from__mamma_mia___original_motion_picture_soundtrack_-MFKqiFG6HVs-192k-1704198491.mp3"></audio>
     <p>
-        Su navegador no soporta el formato del audio, pulse <a href="../../audio/onlymp3.to - Drink Up Me Hearties Yo Ho From Pirates of the Caribbean At World s End Score -RUNRoXbaflM-192k-1704196920.mp3">aquí</a> para descargarlo.
+        Su navegador no soporta el formato del audio, pulse <a href="../../audio/onlymp3.to - mamma_mia__from__mamma_mia___original_motion_picture_soundtrack_-MFKqiFG6HVs-192k-1704198491.mp3">aquí</a> para descargarlo.
     </p>
 </audio>
 <br>
