--- a/activitats/html/08_Multimedia/act2.html
+++ b/activitats/html/08_Multimedia/act2.html
@@ -8,3 +8,34 @@
         Su navegador no soporta el formato del vídeo, pulse <a href="../../video/Gladiator trailer.mp4">aquí</a> para descargarlo.
     </p>
 </video>
+<br>
+<h2>Gladiator</h2>
+<table>
+    <thead>
+        <tr>
+            <th scope="col">Duración de la pelicula</th>
+            <th scope="col">Echos vasados</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>155 minutos</td>
+            <td>Imperio Romano</td>
+        </tr>
+    </tbody>
+</table>
+<br>
+table>
+    <thead>
+        <tr>
+            <th scope="col">Protagonista principal</th>
+            <th scope="col">Actor</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Máximo el comandante</td>
+            <td>Russell Crowe</td>
+        </tr>
+    </tbody>
+</table>
