--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
     <a href="activitats/activitats7.html"> Anar a activitats 7</a>
  <br>
     <a href="activitats/activitats8.html"> Anar a activitats 8</a>
-
-
-
-
-
+ <br>
+    
 </body>
+ <body>
+ <a href="activitats/activitats9.html"> Anar a activitats 9</a>
+
+
+
+
+ </body>
+
 </html>
